--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
          type="application/x-mpegURL">
   </video>
 
-  <!-- Beech Mountain Base / Buckeye Lake -->
+  <!-- Beech Mountain Base -->
   <video controls autoplay muted playsinline
-         src="https://stream.resortcams.com/live/beechbuckeyelake.stream/playlist.m3u8"
+         src="https://stream.resortcams.com/live/beechbase.stream/playlist.m3u8"
          type="application/x-mpegURL">
   </video>
 
-  <!-- Beech Mountain Sledding -->
+  <!-- Beech Mountain Parkway -->
   <video controls autoplay muted playsinline
-         src="https://stream.resortcams.com/live/beechsledding.stream/playlist.m3u8"
+         src="https://stream.resortcams.com/live/beechparkway.stream/playlist.m3u8"
          type="application/x-mpegURL">
   </video>
 
@@ -47,12 +47,6 @@
   <!-- Snowshoe Skidder Slope -->
   <video controls autoplay muted playsinline
          src="https://stream.citynet.net/Snowshoe/smil:village.smil/playlist.m3u8"
-         type="application/x-mpegURL">
-  </video>
-  
-  <!-- Snowshoe Silver Creek -->
-  <video controls autoplay muted playsinline
-         src="https://stream.citynet.net/Snowshoe/silvercreek.smil/playlist.m3u8"
          type="application/x-mpegURL">
   </video>
 
