--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 </head>
 <body>
 
-  <!-- Beech Mountain Summit -->
-  <video controls autoplay muted playsinline
+  <div class="cam">
+    <div class="label">Beech Mountain Summit</div>
+    <video controls autoplay muted playsinline
          src="https://stream.resortcams.com/live/beechsummit.stream/playlist.m3u8"
          type="application/x-mpegURL">
-  </video>
+    </video>
+  </div>  
 
   <!-- Beech Mountain Base -->
   <video controls autoplay muted playsinline
