--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
   <title>Ski Webcam Multiview</title>
   <style>
     body {
-      margin: 0;
-      background: #000;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
-      grid-gap: 10px;
-    }
+  margin: 0;
+  background: #000;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  grid-gap: 5px; /* smaller gap for TV */
+}
 
-    .cam {
-      display: flex;
-      flex-direction: column;
-    }
+.cam {
+  display: flex;
+  flex-direction: column;
+}
 
-    .label {
-      text-align: center;
-      color: white;
-      font-weight: bold;
-      margin-bottom: 5px;
-      font-size: 18px;
-    }
+.label {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 3px;
+  font-size: 18px;
+}
 
-    video, iframe {
-      width: 100%;
-      height: 270px;
-      background: #000;
-    }
+video, iframe {
+  width: 100%;
+  height: calc((100vw / 3) * 9 / 16); /* maintain 16:9 */
+  background: #000;
+}
+
   </style>
 </head>
 <body>
