--- a/index.html
+++ b/index.html
@@ -5,74 +5,64 @@
   <title>Ski Webcam Multiview</title>
   <style>
     body {
-  margin: 0;
-  background: #000;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  grid-gap: 5px; /* smaller gap for TV */
-}
+      margin: 0;
+      background: #000;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr); /* 3 columns across */
+      grid-gap: 5px; /* small gap for TV screens */
+    }
 
-.cam {
-  display: flex;
-  flex-direction: column;
-}
+    .cam {
+      display: flex;
+      flex-direction: column;
+    }
 
-.label {
-  text-align: center;
-  color: white;
-  font-weight: bold;
-  margin-bottom: 3px;
-  font-size: 18px;
-}
+    .label {
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      margin-bottom: 3px;
+      font-size: 18px;
+    }
 
-video, iframe {
-  width: 100%;
-  height: calc((100vw / 3) * 9 / 16); /* maintain 16:9 */
-  background: #000;
-}
-
+    iframe {
+      width: 100%;
+      height: 270px; /* adjust height for 16:9 if needed */
+      border: none;
+      background: #000;
+    }
   </style>
 </head>
 <body>
 
   <div class="cam">
     <div class="label">Beech Mountain Summit</div>
-    <video controls autoplay muted playsinline
-           src="https://stream.resortcams.com/live/beechsummit.stream/playlist.m3u8"
-           type="application/x-mpegURL">
-    </video>
+    <iframe src="https://www.resortcams.com/webcams/beech-mountain-summit/" allowfullscreen></iframe>
   </div>
 
   <div class="cam">
     <div class="label">Beech Mountain Base</div>
-    <video controls autoplay muted playsinline
-           src="https://stream.resortcams.com/live/beechbase.stream/playlist.m3u8"
-           type="application/x-mpegURL">
-    </video>
+    <iframe src="https://www.resortcams.com/webcams/beech-base-cam/" allowfullscreen></iframe>
   </div>
 
   <div class="cam">
     <div class="label">Beech Mountain Parkway</div>
-    <video controls autoplay muted playsinline
-           src="https://stream.resortcams.com/live/beechparkway.stream/playlist.m3u8"
-           type="application/x-mpegURL">
-    </video>
+    <iframe src="https://www.resortcams.com/webcams/beech-parkway/" allowfullscreen></iframe>
   </div>
 
   <div class="cam">
     <div class="label">Snowshoe Ballhooter / Boathouse</div>
-    <video controls autoplay muted playsinline
-           src="https://stream.citynet.net/Snowshoe/smil:boathouse.smil/playlist.m3u8"
-           type="application/x-mpegURL">
-    </video>
+    <iframe src="https://www.snowshoemtn.com/media-room/boathouse-and-ballhooter-lift-live-cam" allowfullscreen></iframe>
   </div>
 
   <div class="cam">
     <div class="label">Snowshoe Skidder Slope</div>
-    <video controls autoplay muted playsinline
-           src="https://stream.citynet.net/Snowshoe/smil:village.smil/playlist.m3u8"
-           type="application/x-mpegURL">
-    </video>
+    <iframe src="https://www.snowshoemtn.com/media-room/village-and-skidder-slope-live-cam" allowfullscreen></iframe>
+  </div>
+
+  <div class="cam">
+    <div class="label">Snowshoe Silver Creek</div>
+    <iframe src="https://www.snowshoemtn.com/media-room/silver-creek-live-cam" allowfullscreen></iframe>
   </div>
 
 </body>
